# GitHubMCP

./: .env.example  .gitignore  LICENSE  README.md  docs.html  ingest.py  plan.md  pyproject.toml  rag_query.py  server.py  server_fallback.py
docs_html/: fastApi.html  fastmcp.html  fix_mermaid.py  fix_responsive.py  index.html  langchain.html  langgraph.html  mcp.html  multi_agent.html  pgAndPgVector.html  rag.html  rag_concept_docs.html  rag_learning_path.html  update_mermaid_newlines.py  write_mermaid_defs.py
github_mcp/: __init__.py  config.py  constants.py
github_mcp/core/: __init__.py  github_api.py
github_mcp/tools/: __init__.py  branches.py  file_operations.py  files.py  project_fields.py  pull_requests.py  rag_query.py  task_assign.py  task_fields.py  task_list.py  task_status.py  tasks.py
github_mcp/utils/: __init__.py  project_helpers.py
