[project]
name = "githubmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "black>=26.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "loguru>=0.7.3",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "stytch>=14.2.0",
    "uvicorn>=0.41.0",
]
