[project]
name = "githubmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.84.0",
    "black>=26.1.0",
    "chromadb>=1.5.4",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.48",
    "stytch>=14.2.0",
    "uvicorn>=0.41.0",
    "langchain_postgres",
    "psycopg2"
]
